--- a/challenge_web/src/app/app.component.html
+++ b/challenge_web/src/app/app.component.html
@@ -1,1 +1,22 @@
-<h1> Que onda pa </h1>
+<app-navbar></app-navbar>
+<div class="container">
+    <div class="card text-center">
+        <div class="card-header">
+            <b>LOGIN</b>
+        </div>
+        <div class="card-body p-4">
+
+            <label style="float: left;">Usuario</label>
+            <input class="form-control m-2" type="users" placeholder="Ingrese un Usuario" >
+
+            <label style="float: left;">Contraseña</label>
+            <input class="form-control m-2" type="password" placeholder="Ingrese una Contraseña" >
+
+            <button class="btn btn-primary btn-block m-2" >Ingresar</button>
+            <label>Aun no tienes cuenta?<a href="#">Registrarse</a></label>
+
+        </div>
+    </div>
+</div>
+
+
