--- a/challenge_web/src/app/app.component.html
+++ b/challenge_web/src/app/app.component.html
@@ -7,10 +7,10 @@
         <div class="card-body p-4">
 
             <label style="float: left;">Usuario</label>
-            <input class="form-control m-2" type="users" placeholder="Ingrese un Usuario" >
+            <input class="form-control m-2" type="users" placeholder="Ingrese un Usuario" [(ngModel)]="usuario.email">
 
             <label style="float: left;">Contraseña</label>
-            <input class="form-control m-2" type="password" placeholder="Ingrese una Contraseña" >
+            <input class="form-control m-2" type="password" placeholder="Ingrese una Contraseña" [(ngModel)]="usuario.password">
 
             <button class="btn btn-primary btn-block m-2" >Ingresar</button>
             <label>Aun no tienes cuenta?<a href="#">Registrarse</a></label>
