--- a/challenge_web/src/app/app.component.html
+++ b/challenge_web/src/app/app.component.html
@@ -12,8 +12,8 @@
             <label style="float: left;">Contraseña</label>
             <input class="form-control m-2" type="password" placeholder="Ingrese una Contraseña" [(ngModel)]="usuario.password">
 
-            <button class="btn btn-primary btn-block m-2" >Ingresar</button>
-            <label>Aun no tienes cuenta?<a href="#">Registrarse</a></label>
+            <button class="btn btn-primary btn-block m-2" (click)="Ingresar()">Ingresar</button>
+            <label>Aun no tienes cuenta?<a href="#" (click)="Registrar()">Registrarse</a></label>
 
         </div>
     </div>
