--- a/ProyectoTorneo/style.css
+++ b/ProyectoTorneo/style.css
@@ -2,6 +2,9 @@ h1{
     font-size: larger;
     font-style: italic;
 }
+p{
+    border-style: dotted;
+}
 
 .container{
     background-color: rgba(136, 174, 199, 0.609);
