--- a/ProyectoTorneo/homeStyle.css
+++ b/ProyectoTorneo/homeStyle.css
@@ -8,29 +8,7 @@
 .navbar .nav-item .nav-link{
    color: #fff;
 }
-/* ---------------------------------- */
-.usario-content{
-    text-align: center;
-    display: none;
-    background-color: white;
 
-}
-
-.usuario-nb:hover>.usuario-content{
-    display: block;
-}
-.usuario-content>a{
-    display: block;
-    padding: 10px;
-    text-decoration: none;
-
-}
-
-.usuario-content>a:hover{
-    color: white;
-    background-color: rgb(134, 191, 255);
-
-}
 /* ---------------------------------- */
 .main-header{                                      
     position: relative;
@@ -114,6 +92,17 @@
     padding: 8px 16px;
     border: none;
     width: 200px;
+    cursor: pointer;
+}
+
+.btn-enfren{
+    background-image: linear-gradient(124deg, #8e44ad, #0f0d0f);
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 30px;
+    padding: 8px 16px;
+    border: none;
     cursor: pointer;
 }
 
